Update with spacing and positioning fixes.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,5 +1,5 @@
 html {
-
+font-family: Verdana;
 }
 
 /*HEADER*/
@@ -45,6 +45,7 @@ li {
   flex-direction: row;
   width: 100%;
   height: 100%;
+  background-color: lightgrey;
   border: 3px solid magenta;
 }
 
@@ -62,6 +63,18 @@ li {
 .banner-content {
   border: 3px solid blue;
   width: 40%;
+  align-items: center;
+}
+
+.banner-content h1,
+.banner-content h2,
+.banner-content .button {
+  padding-left: 16px;
+  padding-right: 100px;
+}
+
+.banner-content h1 {
+  padding-top: 100px;
 }
 
 
@@ -98,16 +111,22 @@ li {
   flex-direction: row;
   align-items: center;
   height: 168px;
+  padding: 16px;
   border: 3px solid purple;
 }
 
+.story-img {
+  width: 35%
+}
+
 .story-img img {
-  width: 35%;
-  padding: 16px;
+  width: 100%;
+  /*padding: 16px;*/
 }
 
 .story-text {
-
+  width: 65%;
+  padding: 16px;
 }
 
 /*LEARN*/
@@ -116,14 +135,19 @@ li {
   display: flex;
   flex-direction: column;
   width: 100%;
+  background-color: lightgrey;
   border: 3px solid magenta;
 }
 
 .learn-heading {
   justify-content: center;
   align-items: center;
+  text-align: center;
+  padding: 32px;
   border: 3px solid magenta;
 }
+
+
 
 .catalog {
   display: flex;
@@ -133,7 +157,17 @@ li {
 }
 
 .course {
+  width: 30%;
+  margin: 16px;
   border: 3px solid violet;
+}
+
+.course img {
+  width: 100%;
+}
+
+.course .description {
+  padding: 16px;
 }
 
 /*EXHIBIT*/
@@ -148,6 +182,8 @@ li {
 .exhibit-heading {
   justify-content: center;
   align-items: center;
+  text-align: center;
+  padding: 32px;
   border: 3px solid magenta;
 }
 
@@ -155,6 +191,10 @@ li {
   display: flex;
   flex-direction: row;
   border: 3px solid magenta;
+}
+
+.exhibit-list {
+  width: 40%;
 }
 
 .exhibit-video {
@@ -169,5 +209,11 @@ footer {
   display: flex;
   flex-direction: row;
   width: 100%;
+  justify-content: space-between;
+  align-items: center;
   border: 3px solid magenta;
+}
+
+footer ul {
+
 }
